syntax = "proto3";

package NUgc.NSchema;

import "google/protobuf/timestamp.proto";

message TFavoriteOrganization {
    string Id = 1;  // collections card_id
    string OrgId = 2; // known business_oid in http://search.maps.yandex.net/1.x/. But I used the same name as in user_org.proto
    google.protobuf.Timestamp Time = 3;
    string ParentId = 4; // source card id
}
